Navbar, fix button and header
- Media query for mobile device; hide top navbar buttons because it overflows on mobile.
- Added Navbar to accommodate for mobile users
- Fixed invite to discord button staying dark on tap; changed to darken only on click

--- a/src/components/InviteDiscordButton/InviteDiscordButton.module.css
+++ b/src/components/InviteDiscordButton/InviteDiscordButton.module.css
@@ -6,11 +6,9 @@
 	border: 0;
 	margin: 0;
 	transition: background 0.3s;
-	&:hover {
-		background: rgb(17, 34, 165);
-	}
 	&:active {
 		transform: translateY(2px);
+		background: rgb(17, 34, 165);
 		
 	  }
 }
